# graiax-silkcoder

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: pypi_upload.yml
graiax/silkcoder/: __init__.py  coder.py  utils.py
graiax/silkcoder/_c_silkv3/bind/: Encoder.c
graiax/silkcoder/_c_silkv3/src/: Coder.c
src/c_silkv3/: codec.h  coder.c  coder.cpp  decoder.c  decoder.h  encoder.c  encoder.h  utils.c  utils.h
src/c_silkv3/src/: Coder.c
src/graiax/silkcoder/: __init__.py  __init__.pyi  __main__.py  _silkv3.pyi  ffmpeg.py  libsndfile.py  silkv3.py  utils.py  wav.py
tests/: test.py
tests/data/: test_48khz_24bit.flac
