[project]
name = "graiax-silkcoder"
version = "0.2.5"
description = "transform audio file to silk"
keywords = ["silkv3"]
authors = [
    {name = "I Love Study", email = "1450069615@qq.com"},
]
dependencies = []
readme = "README.md"
requires-python = ">=3.6"
license = {text = "BSD-3-Clause"}

[project.optional-dependencies]
ffmpeg = ["imageio-ffmpeg"]

[project.urls]
repository = "https://github.com/I-love-study/graiax-silkcoder"

[tool]
[tool.pdm]
build = "build.py"
package-dir = "src"
includes = ["src/graiax"]  
source-includes = ["src/c_silkv3"]

[tool.cibuildwheel]
# 没测过PyPy，先不build了
skip = "pp*"

[build-system]
requires = ["pdm-pep517", "setuptools"]
build-backend = "pdm.pep517.api"
