[project]
name = "graiax-silkcoder"
version = "0.4.0a0" # WIP
description = "transform audio file to silk"
keywords = ["silkv3"]
authors = [
    {name = "I Love Study", email = "1450069615@qq.com"},
]
dependencies = [
    # 虽然写着行的时候 3.13 还在 a0，但是万一呢
    "audioooooooooooooops; python_version >= '3.13'"
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}

[project.optional-dependencies]
# python-soxr 在 0.3.0a2 后才支持 nogil
# soundfile 0.11.0 支持 mp3 格式
libsndfile = ["soundfile >= 0.11.0", "soxr >= 0.3.0a2"]
ffmpeg = ["imageio-ffmpeg"]

[project.urls]
repository = "https://github.com/I-love-study/graiax-silkcoder"

[tool.pdm]
package-dir = "src"
includes = ["src/graiax"]  
source-includes = ["src/c_silkv3"]

[tool.pdm.build]
setup-script = "build.py"
run-setuptools = true

[tool.cibuildwheel]
# PyPy，不行
skip = "pp*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[build-system]
requires = ["pdm-pep517", "setuptools"]
build-backend = "pdm.pep517.api"
